# gerlib

./: .devcontainer.json  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  conanfile.txt
capnp/: CMakeLists.txt  changes.capnp
capnp/ger/: changes.capnp
src/: accounts.rs  changes.rs  details.rs  error.rs  handler.rs  http.rs  lib.rs  projects.rs
src/impl/: changes.rs  mod.rs
test/: CMakeLists.txt
test/capnp/: changes.cc
