[package]
name = "gerlib"
version = "0.1.0"
authors = ["Natanael Rabello <natanael.rabello@outlook.com>"]
repository = "https://github.com/natanaeljr/gerlib"
readme = "README.md"
description = "Rust client library for Gerrit Code Review"
edition = "2018"

[lib]
name = "gerlib"

[dependencies]
chrono = { version = "0.4.9", features = ["serde"] }
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
serde_url_params = "0.2.0"
curl = "0.4.25"
http = "0.2.0"
url = "2.1.0"
log = "0.4.8"
strum = "0.17.1"
strum_macros = "0.17.1"
